# batch2md

./: .env  .gitignore  AGENTS.md  CLAUDE.md  COMPLETION.md  README.md  STATUS.md  TESTING.md  UV_MIGRATION.md  WEB_INTERFACE.md  architecture.drawio  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tech_framework.drawio
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: ConversionOptions.tsx  FileUpload.tsx  PathInput.tsx  ProgressTracker.tsx  ResultsView.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: check_deps.sh  create_fixtures.py  start-web.bat  start-web.sh  test-upload.sh
src/batch2md/: __init__.py  __main__.py  cli.py  converters.py  main.py  models.py  output_manager.py  scanner.py  web_api.py
tests/: __init__.py  conftest.py  test_cli_contract.py  test_doc2pdf.py  test_integration.py  test_output_manager.py  test_pdf2md.py  test_scanner.py
tests/fixtures/: README.md  simple.txt
tests/fixtures/nested/: sample.txt
