[project]
name = "batch2md"
version = "0.1.0"
description = "Batch convert documents to Markdown via PDF using MinerU"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["markdown", "converter", "pdf", "docx", "pptx", "xlsx", "mineru", "batch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]

dependencies = [
    "mineru>=2.0.0",
    "numpy<2",
    "doclayout-yolo>=0.0.1",
    "ultralytics>=8.3.0",
    "tokenizers>=0.22.1",
    "transformers>=4.57.1",
    "ftfy>=6.3.1",
    "dill>=0.4.0",
    "shapely>=2.1.2",
    "pyclipper>=1.3.0.post6",
    "omegaconf>=2.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.scripts]
batch2md = "batch2md.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/batch2md"
Documentation = "https://github.com/yourusername/batch2md/docs"
Repository = "https://github.com/yourusername/batch2md"
Issues = "https://github.com/yourusername/batch2md/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/batch2md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external tools",
    "slow: Slow tests (e.g., processing many files)",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/batch2md"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
